--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 exclude = ["in/*"]
 description = "Rust implementation of the LZJD algorithm (https://github.com/EdwardRaff/jLZJD)"
 readme = "README.md"
-keywords = ["lzjd", "edit", "distance", "Lempel", "Lev"]
+keywords = ["lzjd", "edit", "distance", "Lempel", "Ziv"]
 categories = ["algorithms","compression","cryptography","filesystem","science"]
 license = "GPL-3.0"
 repository = "https://github.com/hdoordt/lzjd-rs"
