--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lzjd"
-version = "0.1.2"
+version = "0.1.3"
 authors = ["Henk Dieter <henkdieter@tweedegolf.com>"]
 edition = "2018"
 exclude = ["in/*"]
@@ -9,7 +9,7 @@ readme = "README.md"
 keywords = ["lzjd", "edit", "distance", "Lempel", "Ziv"]
 categories = ["algorithms","compression","cryptography","filesystem","science"]
 license = "GPL-3.0"
-repository = "https://github.com/hdoordt/lzjd-rs"
+repository = "https://github.com/tweedegolf/lzjd-rs"
 
 [dependencies]
 clap = "2.32.0"
