--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ clap = "2.32.0"
 base64 = "0.10.1"
 failure = "0.1.5"
 failure_derive = "0.1.5"
+fasthash= "0.4.0"
 bincode = "1.1.2"
 crc = "1.8.1"
 walkdir = "2.2.7"
