--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "lzjd"
-version = "0.1.3"
+version = "0.2.0"
 authors = ["Henk Dieter <henkdieter@tweedegolf.com>"]
 edition = "2018"
-exclude = ["in/*"]
+exclude = ["in/*", "out/*"]
 description = "Rust implementation of the LZJD algorithm (https://github.com/EdwardRaff/jLZJD)"
 readme = "README.md"
 keywords = ["lzjd", "edit", "distance", "Lempel", "Ziv"]
