--- a/.github/workflows/commisery.yml
+++ b/.github/workflows/commisery.yml
@@ -22,7 +22,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Run Commisery
-        uses: tomtom-international/commisery-action@v2
+        uses: tomtom-international/commisery-action@33eb2d6e7dfc53e6d3d09ea20c639b8858f75021 # v2.19.3
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           validate-pull-request: false
